backend/auth/auth-api/k8/base/auth-api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
  namespace: auth
  labels:
    team: auth
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
      labels:
        app: auth-api
        team: auth
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - image: eu.gcr.io/insight/auth-api
          name: auth-api
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
