backend/auth/auth-api/k8/base/auth-api.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  labels:
    team: auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-api
  namespace: auth
  labels:
    team: auth
spec:
  type: ClusterIP
  selector:
    app: auth-api
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
