backend/auth/auth-api/k8/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-api
spec:
  type: ClusterIP
  selector:
    app: auth-api
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
