backend/auth/auth-api/k8/base/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auth-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - api.rebrowse.dev
      secretName: api-rebrowse-dev-tls
  rules:
    - host: api.rebrowse.dev
      http:
        paths:
          - path: /v1/user
            backend:
              serviceName: auth-api
              servicePort: 80
    - host: api.rebrowse.dev
      http:
        paths:
          - path: /v1/organization
            backend:
              serviceName: auth-api
              servicePort: 80
    - host: api.rebrowse.dev
      http:
        paths:
          - path: /v1/sso
            backend:
              serviceName: auth-api
              servicePort: 80
    - host: api.rebrowse.dev
      http:
        paths:
          - path: /v1/mfa
            backend:
              serviceName: auth-api
              servicePort: 80
    - host: api.rebrowse.dev
      http:
        paths:
          - path: /v1/password
            backend:
              serviceName: auth-api
              servicePort: 80
    - host: api.rebrowse.dev
      http:
        paths:
          - path: /v1/signup
            backend:
              serviceName: auth-api
              servicePort: 80
